added alert as global in jshint

--- a/.jshintrc
+++ b/.jshintrc
@@ -28,6 +28,7 @@
         "xit": true,
         "spyOn": true,
         "angular": true,
-        "gapi": true
+        "gapi": true,
+        "alert": true
     }
 }
