--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "karma-chrome-launcher": "~0.1.3",
     "karma-mocha-reporter": "~0.2.5",
     "karma-firefox-launcher": "~0.1.3"
+  },
+  "dependencies": {
+    "karma-ng-html2js-preprocessor": "^0.1.0",
+    "protractor": "^1.0.0"
   }
 }
