--- a/.jshintrc
+++ b/.jshintrc
@@ -29,6 +29,7 @@
         "spyOn": true,
         "angular": true,
         "gapi": true,
-        "alert": true
+        "alert": true,
+        "d3": true
     }
 }
