--- a/bower.json
+++ b/bower.json
@@ -10,18 +10,18 @@
   "dependencies": {
     "jquery": "~2.0",
     "underscore": "~1.5",
-    "bootstrap": "~3.1",
-    "angular": "~1.2",
-    "angular-ui-router": "~0.2",
+    "bootstrap": "latest",
+    "angular": "latest",
+    "angular-ui-router": "latest",
     "angular-animate": "~1.2",
     "angular-resource": "~1.2",
     "angular-cookies": "~1.2",
     "angular-mocks": "~1.2",
     "angular-ui-utils": "~0.1",
     "angular-bootstrap": "~0.10",
-    "moment": "~2.5",
-    "less.js": "~1.6",
-    "font-awesome": "~4.0",
-    "d3": "~3.4.11"
+    "moment": "latest",
+    "less.js": "latest",
+    "font-awesome": "latest",
+    "d3": "latest"
   }
 }
