--- a/.jshintrc
+++ b/.jshintrc
@@ -28,6 +28,7 @@
         "xit": true,
         "gapi": true,
         "alert": true,
-        "d3": true
+        "d3": true,
+        "SockJS": true
     }
 }
