--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,14 @@
     "d3": "latest"
   },
   "devDependencies": {
-    "sockjs": "~0.3.4"
+    "sockjs": "~0.3.4",
+    "angular-local-storage": "~0.0.7",
+    "angular-dashboard-framework": "~0.1.0",
+    "jquery-ui": "~1.11.1"
+  },
+  "resolutions": {
+    "angular": "1.2.23",
+    "angular-bootstrap": "~0.11.0",
+    "jquery-ui": "~1.10.3"
   }
 }
