--- a/bower.json
+++ b/bower.json
@@ -1,38 +1,36 @@
 {
-  "name": "katgui",
-  "version": "0.0.0",
-  "main": "index.html",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components"
-  ],
-  "dependencies": {
-    "jquery": "~2.0",
-    "underscore": "~1.5",
-    "bootstrap": "latest",
-    "angular": "latest",
-    "angular-ui-router": "latest",
-    "angular-animate": "~1.2",
-    "angular-resource": "~1.2",
-    "angular-cookies": "~1.2",
-    "angular-mocks": "~1.2",
-    "angular-ui-utils": "~0.1",
-    "angular-bootstrap": "~0.10",
-    "moment": "latest",
-    "less.js": "latest",
-    "font-awesome": "latest",
-    "d3": "latest"
-  },
-  "devDependencies": {
-    "sockjs": "~0.3.4",
-    "angular-local-storage": "~0.0.7",
-    "angular-dashboard-framework": "~0.1.0",
-    "jquery-ui": "~1.11.1"
-  },
-  "resolutions": {
-    "angular": "1.2.23",
-    "angular-bootstrap": "~0.11.0",
-    "jquery-ui": "~1.10.3"
-  }
+    "name": "katgui",
+    "version": "0.0.0",
+    "main": "index.html",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components"
+    ],
+    "dependencies": {
+        "jquery": "~2.0",
+        "underscore": "~1.5",
+        "bootstrap": "latest",
+        "angular": "~1.2",
+        "angular-ui-router": "latest",
+        "angular-animate": "~1.2",
+        "angular-resource": "~1.2",
+        "angular-cookies": "~1.2",
+        "angular-mocks": "~1.2",
+        "angular-ui-utils": "~0.1",
+        "angular-bootstrap": "~0.11.0",
+        "moment": "latest",
+        "less.js": "latest",
+        "font-awesome": "latest",
+        "jquery-ui": "~1.10.3",
+        "d3": "latest"
+    },
+    "devDependencies": {
+        "sockjs": "~0.3.4",
+        "angular-local-storage": "~0.0.7",
+        "angular-dashboard-framework": "~0.1.0",
+        "jquery-ui": "~1.11.1",
+        "ng-grid": "~2.0.13",
+        "angular-bootstrap-datetimepicker": "latest"
+    }
 }
