--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "katgui",
+  "name": "katGui",
   "version": "0.0.0",
   "main": "index.html",
   "ignore": [
@@ -11,7 +11,7 @@
     "jquery": "~2.0",
     "underscore": "~1.5",
     "bootstrap": "latest",
-    "angular": "1.2.24",
+    "angular": "1.2.25",
     "angular-ui-router": "latest",
     "angular-animate": "~1.2",
     "angular-resource": "~1.2",
@@ -36,6 +36,6 @@
   },
   "resolutions": {
     "jquery-ui": "1.11.1",
-    "angular": "1.2.24"
+    "angular": "1.2.25"
   }
 }
