--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "katgui",
-  "version": "0.0.0",
+  "name": "katGui",
+  "version": "0.0.1",
   "devDependencies": {
     "grunt": "~0.4",
     "grunt-angular-templates": "~0.5",
@@ -18,8 +18,6 @@
     "grunt-contrib-watch": "~0.6",
     "grunt-dom-munger": "~3.4",
     "grunt-karma": "~0.8.3",
-    "grunt-ng-annotate": "^0.3.2",
-    "grunt-ngmin": "0.0.3",
     "karma": "~0.12.6",
     "karma-chrome-launcher": "~0.1.3",
     "karma-coverage": "^0.2.6",
@@ -31,6 +29,7 @@
     "load-grunt-tasks": "~0.2"
   },
   "dependencies": {
+    "grunt-ng-annotate": "^0.4.0",
     "karma-ng-html2js-preprocessor": "^0.1.0",
     "protractor": "^1.0.0"
   }
