--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,7 @@
     "angular-gantt": "~0.6.2"
   },
   "resolutions": {
-    "jquery-ui": "1.11.1",
+    "jquery-ui": "~1.11.1",
     "angular": "1.2.25"
   }
 }
