--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "jquery": "~2.0",
     "underscore": "~1.5",
     "bootstrap": "latest",
-    "angular": "1.2.25",
+    "angular": "~1.3.0",
     "angular-ui-router": "latest",
     "angular-animate": "~1.2",
     "angular-resource": "~1.2",
@@ -23,7 +23,8 @@
     "less.js": "latest",
     "font-awesome": "latest",
     "jquery-ui": "~1.10.3",
-    "d3": "latest"
+    "d3": "latest",
+    "angular-material": "~0.0.3"
   },
   "devDependencies": {
     "sockjs": "~0.3.4",
@@ -36,6 +37,7 @@
   },
   "resolutions": {
     "jquery-ui": "~1.11.1",
-    "angular": "1.2.25"
+    "angular": "~1.3.0",
+    "angular-animate": "^1.3.0-beta.18"
   }
 }
