--- a/bower.json
+++ b/bower.json
@@ -11,12 +11,12 @@
     "jquery": "~2.0",
     "underscore": "~1.5",
     "bootstrap": "latest",
-    "angular": "~1.3.0",
+    "angular": "~1.3",
     "angular-ui-router": "latest",
-    "angular-animate": "~1.2",
-    "angular-resource": "~1.2",
-    "angular-cookies": "~1.2",
-    "angular-mocks": "1.2.24",
+    "angular-animate": "~1.3",
+    "angular-resource": "~1.3",
+    "angular-cookies": "~1.3",
+    "angular-mocks": "~1.3",
     "angular-ui-utils": "~0.1",
     "angular-bootstrap": "~0.11.0",
     "moment": "latest",
@@ -28,16 +28,17 @@
   },
   "devDependencies": {
     "sockjs": "~0.3.4",
-    "angular-dashboard-framework": "master",
+    "angular-dashboard-framework": "0.3.2",
     "ng-grid": "~2.0.13",
     "angular-bootstrap-datetimepicker": "latest",
     "ngstorage": "~0.3.0",
     "angular-gantt": "~0.6.4",
-    "angular-aria": "~1.3.0-rc.4",
+    "angular-aria": "~1.3.0",
     "hammerjs": "~2.0.4"
   },
   "resolutions": {
-    "angular": "~1.3.0",
-    "angular-animate": "^1.3.0-beta.18"
+    "angular": "~1.3.0-rc.4",
+    "angular-animate": "^1.3.0",
+    "angular-aria": "~1.3.0-rc.4"
   }
 }
