--- a/bower.json
+++ b/bower.json
@@ -10,13 +10,13 @@
   "dependencies": {
     "jquery": "~2.0",
     "underscore": "~1.5",
-    "bootstrap": "latest",
+    "bootstrap": "~3.2",
     "angular": "~1.3",
     "angular-ui-router": "latest",
-    "angular-animate": "~1.3",
-    "angular-resource": "~1.3",
-    "angular-cookies": "~1.3",
-    "angular-mocks": "~1.3",
+    "angular-animate": "~1.3.0",
+    "angular-resource": "~1.3.0",
+    "angular-cookies": "~1.3.0",
+    "angular-mocks": "~1.3.0",
     "angular-ui-utils": "~0.1",
     "angular-bootstrap": "~0.11.0",
     "moment": "latest",
@@ -37,8 +37,6 @@
     "hammerjs": "~2.0.4"
   },
   "resolutions": {
-    "angular": "~1.3.0-rc.4",
-    "angular-animate": "^1.3.0",
-    "angular-aria": "~1.3.0-rc.4"
+    "angular": "~1.3.0"
   }
 }
