--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "katGui",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": "index.html",
   "ignore": [
     "**/.*",
@@ -29,7 +29,6 @@
   "devDependencies": {
     "sockjs": "~0.3.4",
     "angular-dashboard-framework": "0.3.2",
-    "ng-grid": "~2.0.13",
     "angular-bootstrap-datetimepicker": "latest",
     "ngstorage": "~0.3.0",
     "angular-gantt": "~0.6.4",
@@ -42,3 +41,5 @@
     "angular-aria": "1.3.0"
   }
 }
+
+//    "ng-grid": "~2.0.13",
