--- a/bower.json
+++ b/bower.json
@@ -21,10 +21,10 @@
     "angular-bootstrap": "~0.11.0",
     "moment": "latest",
     "less.js": "latest",
-    "font-awesome": "latest",
+    "font-awesome": "4.2",
     "jquery-ui": "~1.10.3",
     "d3": "latest",
-    "angular-material": "~0.5.1"
+    "angular-material": "master"
   },
   "devDependencies": {
     "sockjs": "~0.3.4",
@@ -38,6 +38,7 @@
   "resolutions": {
     "angular": "1.3.2",
     "angular-animate": "1.3.2",
-    "angular-aria": "1.3.2"
+    "angular-aria": "1.3.2",
+    "font-awesome": "4.2"
   }
 }
