--- a/.jshintrc
+++ b/.jshintrc
@@ -28,6 +28,7 @@
         "xit": true,
         "alert": true,
         "d3": true,
-        "SockJS": true
+        "SockJS": true,
+        "CryptoJS": true
     }
 }
