--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "angular-bootstrap": "~0.11.0",
     "moment": "latest",
     "less.js": "latest",
-    "font-awesome": "4.2",
+    "font-awesome": "~4.2",
     "jquery-ui": "~1.10.3",
     "d3": "latest",
     "angular-material": "~0.6"
@@ -37,8 +37,6 @@
   },
   "resolutions": {
     "angular": "1.3.6",
-    "angular-animate": "1.3.6",
-    "angular-aria": "1.3.6",
-    "font-awesome": "4.2"
+    "font-awesome": "~4.2"
   }
 }
