--- a/bower.json
+++ b/bower.json
@@ -11,12 +11,12 @@
     "jquery": "~2.0",
     "underscore": "~1.5",
     "bootstrap": "~3.2",
-    "angular": "1.3.6",
+    "angular": "1.3.7",
     "angular-ui-router": "latest",
-    "angular-animate": "1.3.6",
-    "angular-resource": "1.3.6",
-    "angular-cookies": "1.3.6",
-    "angular-mocks": "1.3.6",
+    "angular-animate": "1.3.7",
+    "angular-resource": "1.3.7",
+    "angular-cookies": "1.3.7",
+    "angular-mocks": "1.3.7",
     "angular-ui-utils": "~0.1",
     "angular-bootstrap": "~0.11.0",
     "moment": "latest",
@@ -32,11 +32,12 @@
     "angular-bootstrap-datetimepicker": "latest",
     "ngstorage": "~0.3.0",
     "angular-gantt": "~1.0.0",
-    "angular-aria": "1.3.6",
-    "hammerjs": "~2.0.4"
+    "angular-aria": "1.3.7",
+    "hammerjs": "~2.0.4",
+    "cryptojslib": "3.1.2"
   },
   "resolutions": {
-    "angular": "1.3.6",
+    "angular": "1.3.7",
     "font-awesome": "~4.2"
   }
 }
