--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,8 @@
     "angular-gantt": "~1.0.0",
     "angular-aria": "1.3.8",
     "hammerjs": "~2.0.4",
-    "cryptojslib": "3.1.2"
+    "cryptojslib": "3.1.2",
+    "cryptojs": "*"
   },
   "resolutions": {
     "angular": "1.3.8",
