--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,9 @@
     "angular-aria": "1.3.8",
     "hammerjs": "~2.0.4",
     "cryptojslib": "3.1.2",
-    "cryptojs": "*"
+    "cryptojs": "*",
+    "jsjws": "~3.0.2",
+    "jsrsasign": "~4.7.0"
   },
   "resolutions": {
     "angular": "1.3.8",
