--- a/bower.json
+++ b/bower.json
@@ -24,13 +24,13 @@
     "font-awesome": "~4.2",
     "jquery-ui": "~1.10.3",
     "d3": "latest",
-    "angular-material": "0.7.0"
+    "angular-material": "~0.7"
   },
   "devDependencies": {
     "sockjs": "~0.3.4",
     "angular-dashboard-framework": "0.3.2",
     "angular-bootstrap-datetimepicker": "latest",
-    "ngstorage": "~0.3.0",
+    "ngstorage": "~0.3",
     "angular-gantt": "~1.0.0",
     "angular-aria": "~1.3",
     "hammerjs": "~2.0.4",
