--- a/bower.json
+++ b/bower.json
@@ -1,46 +1,46 @@
 {
-  "name": "katGui",
-  "version": "0.0.1",
-  "main": "index.html",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components"
-  ],
-  "dependencies": {
-    "jquery": "~2.0",
-    "underscore": "~1.5",
-    "bootstrap": "~3.2",
-    "angular": "~1.3",
-    "angular-ui-router": "latest",
-    "angular-animate": "~1.3",
-    "angular-resource": "~1.3",
-    "angular-cookies": "~1.3",
-    "angular-mocks": "~1.3",
-    "angular-ui-utils": "~0.1",
-    "angular-bootstrap": "~0.11.0",
-    "moment": "latest",
-    "less.js": "latest",
-    "font-awesome": "~4.2",
-    "jquery-ui": "~1.10.3",
-    "d3": "latest",
-    "angular-material": "~0.7"
-  },
-  "devDependencies": {
-    "sockjs": "~0.3.4",
-    "angular-dashboard-framework": "0.3.2",
-    "angular-bootstrap-datetimepicker": "latest",
-    "ngstorage": "~0.3",
-    "angular-gantt": "~1.1",
-    "angular-aria": "~1.3",
-    "hammerjs": "~2.0.4",
-    "cryptojslib": "3.1.2",
-    "cryptojs": "*",
-    "jsjws": "~3.0.2",
-    "jsrsasign": "~4.7.0"
-  },
-  "resolutions": {
-    "angular": "~1.3",
-    "font-awesome": "~4.2"
-  }
+    "name": "katGui",
+    "version": "0.0.1",
+    "main": "index.html",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components"
+    ],
+    "dependencies": {
+        "jquery": "~2.0",
+        "underscore": "~1.5",
+        "bootstrap": "~3.2",
+        "angular": "~1.3",
+        "angular-ui-router": "latest",
+        "angular-animate": "~1.3",
+        "angular-resource": "~1.3",
+        "angular-cookies": "~1.3",
+        "angular-mocks": "~1.3",
+        "angular-ui-utils": "~0.1",
+        "angular-bootstrap": "~0.11.0",
+        "moment": "latest",
+        "less.js": "latest",
+        "font-awesome": "~4.2",
+        "jquery-ui": "~1.10.3",
+        "d3": "~3",
+        "angular-material": "~0.7"
+    },
+    "devDependencies": {
+        "sockjs": "~0.3.4",
+        "angular-dashboard-framework": "0.3.2",
+        "angular-bootstrap-datetimepicker": "latest",
+        "ngstorage": "~0.3",
+        "angular-aria": "~1.3",
+        "hammerjs": "~2.0.4",
+        "cryptojslib": "3.1.2",
+        "cryptojs": "*",
+        "jsjws": "~3.0.2",
+        "jsrsasign": "~4.7.0",
+        "angular-ui-sortable": "0.13.0"
+    },
+    "resolutions": {
+        "angular": "~1.3",
+        "font-awesome": "~4.2"
+    }
 }
