more scheduler tests

--- a/.jshintrc
+++ b/.jshintrc
@@ -13,6 +13,7 @@
     "smarttabs": true,
     "globals": {
         "jQuery": true,
+        "jasmine": true,
         "spyOn": true,
         "angular": true,
         "console": true,
