--- a/package.json
+++ b/package.json
@@ -2,31 +2,44 @@
   "name": "katGui",
   "version": "0.0.1",
   "devDependencies": {
-    "grunt": "~0.4",
-    "grunt-angular-templates": "~0.5",
-    "grunt-browser-output": "0.1.0",
-    "grunt-contrib-clean": "~0.5",
-    "grunt-contrib-concat": "~0.3",
-    "grunt-contrib-connect": "~0.6",
-    "grunt-contrib-copy": "~0.5",
-    "grunt-contrib-cssmin": "~0.7",
-    "grunt-contrib-htmlmin": "~0.1",
-    "grunt-contrib-imagemin": "~0.4",
-    "grunt-contrib-jshint": "~0.9",
-    "grunt-contrib-less": "~0.8",
-    "grunt-contrib-uglify": "~0.2",
-    "grunt-contrib-watch": "~0.6",
-    "grunt-dom-munger": "~3.4",
+    "batch": "~0.5.2",
+    "bytes": "~1.0.0",
+    "cookie-signature": "~1.0.6",
+    "debug": "~2.1.1",
+    "grunt": "~0.4.5",
+    "grunt-angular-templates": "~0.5.7",
+    "grunt-browser-output": "~0.1.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-connect": "~0.6.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-contrib-imagemin": "~0.4.1",
+    "grunt-contrib-jshint": "~0.9.2",
+    "grunt-contrib-less": "~1.0.0",
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-dom-munger": "~3.4.0",
     "grunt-karma": "~0.8.3",
-    "karma": "~0.12.6",
-    "karma-chrome-launcher": "~0.1.3",
-    "karma-coverage": "^0.2.6",
-    "karma-firefox-launcher": "~0.1.3",
+    "grunt-lib-contrib": "~0.7.1",
+    "grunt-ng-annotate": "~0.4.0",
+    "karma": "~0.12.31",
+    "karma-chrome-launcher": "~0.1.7",
+    "karma-coverage": "~0.2.7",
+    "karma-firefox-launcher": "~0.1.4",
     "karma-jasmine": "~0.1.5",
-    "karma-junit-reporter": "^0.2.2",
-    "karma-mocha-reporter": "~0.2.5",
+    "karma-junit-reporter": "~0.2.2",
+    "karma-mocha-reporter": "~0.2.8",
+    "karma-ng-html2js-preprocessor": "~0.1.2",
     "karma-phantomjs-launcher": "~0.1.4",
-    "load-grunt-tasks": "~0.2"
+    "less": "~2.4.0",
+    "load-grunt-tasks": "~0.2.1",
+    "mime-db": "~1.7.0",
+    "negotiator": "~0.5.1",
+    "node": "~0.0.0",
+    "protractor": "~1.8.0",
+    "send": "~0.12.0"
   },
   "dependencies": {
     "grunt-ng-annotate": "^0.4.0",
