--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
         "karma-jasmine": "~0.3.5",
         "karma-junit-reporter": "^0.2.2",
         "karma-mocha-reporter": "~0.2.8",
-        "grunt-lib-contrib": "~0.7.1",
         "karma-junit-reporter": "~0.2.2",
         "karma-mocha-reporter": "~0.2.8",
         "karma-phantomjs-launcher": "~0.1.4",
@@ -43,7 +42,6 @@
     },
     "dependencies": {
         "grunt-ng-annotate": "^0.4.0",
-        "karma-ng-html2js-preprocessor": "~0.1.2",
-        "protractor": "^1.0.0"
+        "karma-ng-html2js-preprocessor": "~0.1.2"
     }
 }
