--- a/package.json
+++ b/package.json
@@ -22,6 +22,24 @@
         "grunt-contrib-watch": "~0.6.1",
         "grunt-dom-munger": "~3.4.0",
         "grunt-karma": "~0.10",
+        "gulp": "latest",
+        "gulp-concat": "latest",
+        "gulp-uglify": "latest",
+        "gulp-less": "latest",
+        "gulp-ng-html2js": "latest",
+        "gulp-htmlmin": "latest",
+        "gulp-cssmin": "latest",
+        "gulp-jasmine": "latest",
+        "gulp-rename": "latest",
+        "gulp-jshint": "latest",
+        "gulp-cheerio": "latest",
+        "gulp-dom-src": "latest",
+        "gulp-watch": "latest",
+        "gulp-ng-annotate": "latest",
+        "gulp-karma": "latest",
+        "jshint-stylish": "latest",
+        "rimraf": "latest",
+        "streamqueue": "latest",
         "karma": "~0.12.31",
         "karma-chrome-launcher": "~0.1.8",
         "karma-coverage": "~0.2.7",
