--- a/bower.json
+++ b/bower.json
@@ -1,43 +1,42 @@
 {
     "name": "katGui",
-    "version": "0.0.1",
+    "version": "0.1.0",
+    "homepage": "https://github.com/ska-sa/katgui",
+    "authors": [
+        "Francois Joubert <fjoubert@ska.ac.za>"
+    ],
+    "description": "SKA-SA MeerKAT GUI",
     "main": "index.html",
     "ignore": [
         "**/.*",
         "node_modules",
-        "bower_components"
+        "bower_components",
+        "test-results",
+        "dist"
     ],
     "dependencies": {
-        "jquery": "~2.1",
-        "underscore": "~1.8",
-        "bootstrap": "~3.3",
-        "angular": "~1.4",
-        "angular-ui-router": "~0.2",
         "angular-animate": "~1.4",
-        "angular-resource": "~1.4",
-        "angular-cookies": "~1.4",
-        "angular-mocks": "~1.4",
-        "angular-ui-utils": "~0.1",
-        "angular-bootstrap": "~0.12",
-        "moment": "latest",
-        "less.js": "latest",
-        "font-awesome": "~4.3",
-        "jquery-ui": "~1.10.3",
-        "d3": "~3",
+        "angular-bootstrap-datetimepicker": "~0.3",
+        "angular-bootstrap": "0.12.0",
         "angular-material": "~0.9",
-        "Sortable": "1.1.1"
-    },
-    "devDependencies": {
-        "sockjs": "~0.3.4",
+        "angular-cookies": "~1.4",
+        "angular-resource": "~1.4",
         "angular-dashboard-framework": "0.9",
-        "angular-bootstrap-datetimepicker": "latest",
-        "ngstorage": "~0.3",
-        "angular-aria": "~1.4",
-        "hammerjs": "~2.0.4",
-        "cryptojslib": "3.1.2",
+        "angular-ui-utils": "~0.1",
+        "angular-ui-router": "~0.2",
         "cryptojs": "*",
+        "d3": "~3",
+        "hammerjs": "~2.0.4",
+        "jquery-ui": "~1.10.3",
+        "cryptojslib": "3.1.2",
+        "jsrsasign": "~4.7.0",
         "jsjws": "~3.0.2",
-        "jsrsasign": "~4.7.0"
+        "font-awesome": "~4.3",
+        "less.js": "~2.5",
+        "angular-mocks": "~1.4",
+        "ngstorage": "~0.3",
+        "sockjs": "~0.3.4",
+        "underscore": "~1.8"
     },
     "resolutions": {
         "angular": "~1.4"
