--- a/package.json
+++ b/package.json
@@ -1,64 +1,58 @@
 {
     "name": "katGui",
-    "version": "0.0.1",
-    "devDependencies": {
-        "batch": "~0.5.2",
-        "bytes": "~1.0.0",
-        "cookie-signature": "~1.0.6",
-        "debug": "~2.1.1",
-        "grunt": "~0.4.5",
-        "grunt-angular-templates": "~0.5.7",
-        "grunt-browser-output": "~0.1.0",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-concat": "~0.3.0",
-        "grunt-contrib-connect": "~0.6.0",
-        "grunt-contrib-copy": "~0.5.0",
-        "grunt-contrib-cssmin": "~0.12.3",
-        "grunt-contrib-htmlmin": "~0.1.3",
-        "grunt-contrib-imagemin": "~0.4.1",
-        "grunt-contrib-jshint": "~0.9.2",
-        "grunt-contrib-less": "~1.0.0",
-        "grunt-contrib-uglify": "~0.2.7",
-        "grunt-contrib-watch": "~0.6.1",
-        "grunt-dom-munger": "~3.4.0",
-        "grunt-karma": "~0.10",
-        "gulp": "latest",
-        "gulp-concat": "latest",
-        "gulp-uglify": "latest",
-        "gulp-less": "latest",
-        "gulp-ng-html2js": "latest",
-        "gulp-htmlmin": "latest",
-        "gulp-cssmin": "latest",
-        "gulp-jasmine": "latest",
-        "gulp-rename": "latest",
-        "gulp-jshint": "latest",
-        "gulp-cheerio": "latest",
-        "gulp-dom-src": "latest",
-        "gulp-watch": "latest",
-        "gulp-ng-annotate": "latest",
-        "gulp-karma": "latest",
-        "jshint-stylish": "latest",
-        "rimraf": "latest",
-        "streamqueue": "latest",
-        "karma": "~0.12.31",
-        "karma-chrome-launcher": "~0.1.8",
-        "karma-coverage": "~0.2.7",
-        "karma-firefox-launcher": "~0.1.4",
-        "karma-jasmine": "~0.3.5",
-        "karma-junit-reporter": "^0.2.2",
-        "karma-mocha-reporter": "~0.2.8",
-        "karma-phantomjs-launcher": "~0.1.4",
-        "less": "~2.4.0",
-        "load-grunt-tasks": "~0.2.1",
-        "mime-db": "~1.7.0",
-        "negotiator": "~0.5.1",
-        "node": "~0.0.0",
-        "protractor": "~1.8.0",
-        "send": "~0.12.0",
-        "phantomjs": "~1.9"
-    },
+    "version": "0.1.0",
+    "description": "SKA-SA MeerKAT GUI",
+    "main": "index.html",
     "dependencies": {
-        "grunt-ng-annotate": "~0.10",
-        "karma-ng-html2js-preprocessor": "~0.1"
-    }
+        "angular-mocks": "^1.3.15",
+        "batch": "^0.5.2",
+        "bytes": "^1.0.0",
+        "cookie-signature": "^1.0.6",
+        "debug": "^2.1.3",
+        "gulp": "^3.8.11",
+        "gulp-cheerio": "^0.6.2",
+        "gulp-concat": "^2.5.2",
+        "gulp-cssmin": "^0.1.7",
+        "gulp-dom-src": "^0.2.0",
+        "gulp-htmlmin": "^1.1.1",
+        "gulp-jasmine": "^2.0.1",
+        "gulp-jshint": "^1.11.0",
+        "gulp-karma": "^0.0.4",
+        "gulp-less": "^3.0.3",
+        "gulp-ng-annotate": "^0.5.3",
+        "gulp-ng-html2js": "^0.2.0",
+        "gulp-rename": "^1.2.2",
+        "gulp-uglify": "^1.2.0",
+        "gulp-watch": "^4.2.4",
+        "gulp-webserver": "^0.9.1",
+        "jasmine-core": "^2.3.4",
+        "jshint-stylish": "^2.0.0",
+        "karma": "^0.12.32",
+        "karma-chrome-launcher": "^0.1.12",
+        "karma-coverage": "^0.2.7",
+        "karma-failed-reporter": "^0.0.3",
+        "karma-jasmine": "^0.3.5",
+        "karma-junit-reporter": "^0.2.2",
+        "karma-mocha-reporter": "^0.2.8",
+        "karma-ng-html2js-preprocessor": "^0.1.2",
+        "karma-phantomjs-launcher": "^0.1.4",
+        "less": "^2.4.0",
+        "mime-db": "^1.7.0",
+        "negotiator": "^0.5.3",
+        "phantomjs": "^1.9.17",
+        "protractor": "^1.8.0",
+        "rimraf": "^2.3.4",
+        "send": "^0.12.3",
+        "streamqueue": "^0.1.3"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ska-sa/katgui.git"
+    },
+    "author": "Francois Joubert <fjoubert@ska.ac.za>",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/ska-sa/katgui/issues"
+    },
+    "homepage": "https://github.com/ska-sa/katgui"
 }
