--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
         "d3": "~3",
         "hammerjs": "~2.0.4",
         "jquery-ui": "~1.10.3",
+        "jquery": "~2.1",
         "cryptojslib": "3.1.2",
         "jsrsasign": "~4.7.0",
         "jsjws": "~3.0.2",
