--- a/bower.json
+++ b/bower.json
@@ -1,48 +1,48 @@
 {
-    "name": "katGui",
-    "version": "0.1.0",
-    "homepage": "https://github.com/ska-sa/katgui",
-    "authors": [
-        "Francois Joubert <fjoubert@ska.ac.za>"
-    ],
-    "description": "SKA-SA MeerKAT GUI",
-    "main": "index.html",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test-results",
-        "dist"
-    ],
-    "dependencies": {
-        "angular-animate": "~1.4",
-        "angular-bootstrap-datetimepicker": "~0.3",
-        "angular-bootstrap": "~0.12",
-        "angular-material": "~0.10",
-        "angular-cookies": "~1.4",
-        "angular-resource": "~1.4",
-        "angular-dashboard-framework": "0.9",
-        "angular-ui-utils": "~0.1",
-        "angular-ui-router": "~0.2",
-        "cryptojs": "*",
-        "d3": "~3",
-        "hammerjs": "~2.0.4",
-        "jquery-ui": "~1.10.3",
-        "jquery": "~2.1",
-        "cryptojslib": "3.1.2",
-        "jsrsasign": "~4.7.0",
-        "jsjws": "~3.0.2",
-        "font-awesome": "~4.3",
-        "less.js": "~2.5",
-        "angular-mocks": "~1.4",
-        "ngstorage": "~0.3",
-        "sockjs": "~0.3.4",
-        "underscore": "~1.8"
-    },
-    "resolutions": {
-        "angular": "~1.4",
-        "angular-bootstrap": "~0.12",
-        "jquery": "~2.1",
-        "bootstrap": "~3.3"
-    }
+  "name": "katGui",
+  "version": "0.1.0",
+  "homepage": "https://github.com/ska-sa/katgui",
+  "authors": [
+    "Francois Joubert <fjoubert@ska.ac.za>"
+  ],
+  "description": "SKA-SA MeerKAT GUI",
+  "main": "index.html",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test-results",
+    "dist"
+  ],
+  "dependencies": {
+    "angular-animate": "~1.4",
+    "angular-bootstrap-datetimepicker": "~0.3",
+    "angular-bootstrap": "~0.12",
+    "angular-material": "~0.10",
+    "angular-cookies": "~1.4",
+    "angular-resource": "~1.4",
+    "angular-dashboard-framework": "0.9",
+    "angular-ui-utils": "~0.1",
+    "angular-ui-router": "~0.2",
+    "cryptojs": "*",
+    "d3": "~3",
+    "hammerjs": "~2.0.4",
+    "jquery-ui": "~1.10.3",
+    "jquery": "~2.1",
+    "cryptojslib": "3.1.2",
+    "jsrsasign": "~4.7.0",
+    "jsjws": "~3.0.2",
+    "font-awesome": "~4.3",
+    "less.js": "~2.5",
+    "angular-mocks": "~1.4",
+    "ngstorage": "~0.3",
+    "sockjs": "~0.3.4",
+    "underscore": "~1.8"
+  },
+  "resolutions": {
+    "angular": ">= 1.4",
+    "angular-bootstrap": "~0.12",
+    "jquery": "~2.1",
+    "bootstrap": "~3.3"
+  }
 }
