--- a/bower.json
+++ b/bower.json
@@ -38,9 +38,9 @@
     "ngstorage": "~0.3",
     "sockjs": "~0.3.4",
     "underscore": "~1.8",
-    "jspdf": "*",
-    "html2canvas": "*",
-    "jspdf-autotable": "*"
+    "jspdf": "1.0.272",
+    "html2canvas": "0.4.1",
+    "jspdf-autotable": "1.3.4"
   },
   "resolutions": {
     "angular": ">= 1.4",
