wip sensor-graph improvements

--- a/.jshintrc
+++ b/.jshintrc
@@ -32,6 +32,7 @@
         "alert": true,
         "d3": true,
         "SockJS": true,
-        "CryptoJS": true
+        "CryptoJS": true,
+        "jsPDF": true
     }
 }
