--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
         "phantomjs": "^1.9.17",
         "protractor": "^1.8.0",
         "send": "^0.12.3",
-        "streamqueue": "^0.1.3"
+        "streamqueue": "^0.1.3",
+        "del": "2.2.0"
     },
     "repository": {
         "type": "git",
