--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
         "protractor": "^1.8.0",
         "send": "^0.12.3",
         "streamqueue": "^0.1.3",
-        "del": "2.2.0"
+        "del": "2.2.0",
+        "vinyl": "1.1.0"
     },
     "repository": {
         "type": "git",
