--- a/bower.json
+++ b/bower.json
@@ -15,13 +15,13 @@
     "dist"
   ],
   "dependencies": {
-    "angular-animate": "~1.4.8",
+    "angular-animate": "1.4.8",
     "angular-bootstrap-datetimepicker": "~0.3",
     "angular-bootstrap": "~0.12",
     "angular-material": "1.0.4",
-    "angular-cookies": "~1.4.8",
-    "angular-resource": "~1.4.8",
-    "angular-mocks": "~1.4.8",
+    "angular-cookies": "1.4.8",
+    "angular-resource": "1.4.8",
+    "angular-mocks": "1.4.8",
     "angular-dashboard-framework": "0.9",
     "angular-ui-utils": "~0.1",
     "angular-ui-router": "~0.2",
@@ -43,7 +43,7 @@
     "jspdf-autotable": "1.3.4"
   },
   "resolutions": {
-    "angular": ">= 1.4.8",
+    "angular": "1.4.8",
     "angular-bootstrap": "~0.12",
     "jquery": "~2.1",
     "bootstrap": "~3.3"
