--- a/bower.json
+++ b/bower.json
@@ -39,7 +39,8 @@
     "underscore": "~1.8",
     "jspdf": "1.0.272",
     "html2canvas": "0.4.1",
-    "jspdf-autotable": "2.0.19"
+    "jspdf-autotable": "2.0.19",
+    "bootstrap": "3.3"
   },
   "resolutions": {
     "angular": "~1.5",
