--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "angular-animate": "1.4.8",
     "angular-bootstrap-datetimepicker": "~0.3",
     "angular-bootstrap": "~0.12",
-    "angular-material": "1.1.0-rc.5",
+    "angular-material": "1.1.0",
     "angular-cookies": "~1.5",
     "angular-resource": "~1.5",
     "angular-mocks": "~1.5",
