added messages for incorrect form input in login dialog; get system config when entering a portal url in dev mode

--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-cookies": "~1.5",
     "angular-resource": "~1.5",
     "angular-mocks": "~1.5",
+    "angular-messages": "~1.5",
     "angular-ui-utils": "~0.1",
     "angular-ui-router": "~0.3",
     "cryptojs": "*",
