--- a/package.json
+++ b/package.json
@@ -4,7 +4,31 @@
     "description": "SKA-SA MeerKAT GUI",
     "main": "index.html",
     "dependencies": {
-        "angular-mocks": "^1.3.15",
+        "angular-animate": "1.4.8",
+        "angular-bootstrap-datetimepicker": "~0.3",
+        "angular-bootstrap": "~0.12",
+        "angular-aria": "~1.5",
+        "angular-material": "1.1.0",
+        "angular-cookies": "~1.5",
+        "angular-resource": "~1.5",
+        "angular-mocks": "~1.5",
+        "angular-messages": "~1.5",
+        "angular-ui-utils": "0.1.1",
+        "angular-ui-router": "~0.3",
+        "d3": "~3",
+        "hammerjs": "~2.0.4",
+        "jquery-ui": "~1.10.3",
+        "jquery": "~2.1",
+        "crypto-js": "3.1.2",
+        "jsrsasign": "~4.8",
+        "font-awesome": "~4.3",
+        "less": "~2.5",
+        "ngstorage": "~0.3",
+        "sockjs-client": "https://github.com/sockjs/sockjs-client/archive/v1.1.0.tar.gz",
+        "underscore": "~1.8",
+        "jspdf": "1.0.272",
+        "jspdf-autotable": "2.0.19",
+        "bootstrap": "3.3",
         "batch": "^0.5.2",
         "bytes": "^1.0.0",
         "cookie-signature": "^1.0.6",
