--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "crypto-js": "3.1.2",
         "jsrsasign": "~4.8",
         "font-awesome": "~4.3",
-        "less": "~2.5",
+        "less": "2.7.1",
         "ngstorage": "~0.3",
         "sockjs-client": "1.1.4",
         "underscore": "~1.8",
@@ -45,7 +45,7 @@
         "gulp-webserver": "0.9.1",
         "gulp-util": "3.0.7",
         "gulp-insert": "0.5.0",
-        "less": "2.7.1",
+        "gulp-replace": "^0.6.1",
         "mime-db": "^1.7.0",
         "negotiator": "^0.5.3",
         "send": "^0.12.3",
