--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "angular-mocks": "~1.6",
         "angular-resource": "~1.6",
         "angular-ui-router": "~0.4",
+        "angular-ui-tree": "~2.22",
         "angular-ui-utils": "0.1.1",
         "bootstrap": "3.3",
         "crypto-js": "3.1.2",
