--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "angular-animate": "~1.6",
         "angular-aria": "~1.6",
         "angular-bootstrap": "~0.12",
+        "angular-right-click": "^0.1.1",
         "angular-bootstrap-datetimepicker": "1.1.4",
         "angular-cookies": "~1.6",
         "angular-material": "1.1.6",
