--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
         "font-awesome": "~4.3",
         "gulp": "^3.9.1",
         "gulp-cheerio": "0.6.2",
+        "gulp-concat": "2.6.0",
         "gulp-cssmin": "0.1.7",
         "gulp-dom-src": "0.2.0",
         "gulp-htmlmin": "^1.1.1",
         "gulp-insert": "0.5.0",
         "gulp-jasmine": "2.4.2",
+        "gulp-less": "3.1.0",
         "gulp-ng-annotate": "2.0.0",
         "gulp-ng-html2js": "0.2.2",
         "gulp-rename": "1.2.2",
         "gulp-replace": "^0.6.1",
+        "gulp-uglify": "2.0.0",
         "gulp-util": "3.0.7",
         "gulp-watch": "4.3.10",
         "gulp-webserver": "0.9.1",
@@ -60,10 +63,5 @@
     "bugs": {
         "url": "https://github.com/ska-sa/katgui/issues"
     },
-    "homepage": "https://github.com/ska-sa/katgui",
-    "devDependencies": {
-        "gulp-concat": "^2.6.0",
-        "gulp-less": "^3.1.0",
-        "gulp-uglify": "^2.0.0"
-    }
+    "homepage": "https://github.com/ska-sa/katgui"
 }
