--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
         "angular-animate": "~1.6",
         "angular-aria": "~1.6",
         "angular-bootstrap": "~0.12",
-        "angular-right-click": "^0.1.1",
         "angular-bootstrap-datetimepicker": "1.1.4",
         "angular-cookies": "~1.6",
         "angular-material": "1.1.6",
         "angular-messages": "~1.6",
         "angular-mocks": "~1.6",
         "angular-resource": "~1.6",
+        "angular-right-click": "^0.1.1",
         "angular-ui-router": "~0.4",
         "angular-ui-utils": "0.1.1",
-        "bootstrap": "3.3",
+        "bootstrap": "^4.5.2",
         "crypto-js": "3.1.2",
         "d3": "~3",
         "del": "2.2.0",
@@ -29,12 +29,12 @@
         "gulp-concat": "2.6.0",
         "gulp-cssmin": "0.1.7",
         "gulp-dom-src": "0.2.0",
-        "gulp-htmlmin": "^1.1.1",
+        "gulp-htmlmin": "^5.0.1",
         "gulp-insert": "0.5.0",
         "gulp-jasmine": "2.4.2",
-        "gulp-less": "3.1.0",
+        "gulp-less": "^4.0.1",
         "gulp-ng-annotate": "2.0.0",
-        "gulp-ng-html2js": "0.2.2",
+        "gulp-ng-html2js": "^0.2.3",
         "gulp-rename": "1.2.2",
         "gulp-replace": "^0.6.1",
         "gulp-uglify": "2.0.0",
@@ -46,12 +46,12 @@
         "jquery-ui": "^1.12",
         "jspdf": "1.3.2",
         "jspdf-autotable": "2.0.19",
-        "jsrsasign": "~4.8",
+        "jsrsasign": "^9.1.9",
         "less": "2.7.1",
         "mime-db": "^1.7.0",
-        "negotiator": "^0.5.3",
+        "negotiator": "^0.6.2",
         "ngstorage": "~0.3",
-        "send": "^0.12.3",
+        "send": "^0.17.1",
         "sockjs-client": "1.1.4",
         "streamqueue": "^0.1.3",
         "underscore": "~1.8",
@@ -66,5 +66,8 @@
     "bugs": {
         "url": "https://github.com/ska-sa/katgui/issues"
     },
-    "homepage": "https://github.com/ska-sa/katgui"
+    "homepage": "https://github.com/ska-sa/katgui",
+    "devDependencies": {
+        "arkit": "^1.6.4"
+    }
 }
