Create docker volumes and Updated makefile docs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: '3.8'
+version: '3.5'
 
 services:
   katgui:
     build: .
     image: node:10
+    volumes:
+      - "./:/usr/src/app"
     ports:
       - 8000:8000
-    volumes:
-      - ".:/usr/src/app"
     command: gulp webserver
